# moodle-grader

./: .gitignore  pyproject.toml
src/autograder/: core.py  moodle.py  scripts.py
src/moodle_grader/: moodle.py  pdf.py  scripts.py
