[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "moodle-grader"
version = "0.0.1"
requires-python = ">=3.14"
authors = [{ name = "Imogen Hergeth" }]

dependencies = [
    "typer>=0.20.0",
    "ruff>=0.14.9",
    "pypdf>=6.4.1",
    "reportlab>=4.4.6",
    "pydantic>=2.12.5",
    "email-validator>=2.3.0",
    "requests>=2.32.5",
    "pillow>=12.0.0",
    "tomlkit>=0.13.3",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
moodle-grader = "moodle_grader.scripts:app"

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "BLE",
    "FBT",
    "B",
    "C4",
    "DTZ",
    "ISC",
    "G",
    "PIE",
    "PYI",
    "SLOT",
    "SIM",
    "PTH",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = ["TRY003", "PIE790", "FBT001", "B027", "FBT003", "RUF001"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false
combine-as-imports = true

[tool.pyright]
typeCheckingMode = "standard"
disableBytesTypePromotions = true
strictDictionaryInference = true
strictListInference = true
strictSetInference = true
deprecateTypingAliases = true
enableExperimentalFeatures = true
reportAssertAlwaysTrue = "information"
reportUnusedExpression = "information"
reportConstantRedefinition = "warning"
reportDeprecated = "information"
reportDuplicateImport = "information"
reportIncompleteStub = "warning"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "none"
reportPrivateUsage = "none"
reportTypeCommentUsage = "information"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "information"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnusedCoroutine = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"
reportCallInDefaultInitializer = "none"
reportImportCycles = "warning"
reportPropertyTypeMismatch = "error"
reportShadowedImports = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
reportUninitializedInstanceVariable = "warning"
reportFunctionMemberAccess = "warning"
reportOverlappingOverload = "warning"
